# ml-testing

./: README.md  mkdocs.yml  pyproject.toml
docs/: about.md  api.md  examples.md  index.md
docs/overrides/: announce.html  main.html
docs/theme/: extra.css
src/: cli.py  config.py  main.py
src/cli/: common.py  main.py
src/cli/request/: main.py
src/cli/sample/: __init__.py  main.py  sample.py
src/server/: main.py
src/server/sample/: view.py
src/server/train/: __init__.py  view.py
src/train/: view.py
